# grading-helper

./: Cargo.toml
migrations/2020-08-19-025406_configuration/: down.sql  up.sql
migrations/2020-08-19-025426_student/: down.sql  up.sql
migrations/2020-08-19-025437_grade/: down.sql  up.sql
migrations/2020-08-19-030238_project/: up.sql
src/: container.rs  dump.rs  judge.rs  main.rs  model.rs  schema.rs  status.rs  utils.rs
