[package]
name = "helper"
version = "0.1.0"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
anyhow = "1"
dotenv = "0.15"
serde = {version = "1.0", features = ["derive"]}
diesel = { version = "1.4", features = ["sqlite", "extras", "unstable"] }
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
tablefy = "0.1"
tablefy_derive = "0.2"
prettytable-rs = "0.8"
serde_json = "1.0"
dialoguer = "0.6"
simple_excel_writer = { git = "https://github.com/SchrodingerZhu/simple_excel_writer" }
